# Vanguard-0

./: .gitignore  CMakeLists.txt  README.md  build.sh
docs/: PROJECT_STRATEGY.md
include/math/: Vector3.h
include/physics/: Drone.h
src/: main.cpp
